--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,11 @@
 		{% block style %}{% endblock %}
         <link rel="stylesheet" href="{% static 'css/leaflet.css' %}" />
 		<!--[if lte IE 8]>
-		    <link rel="stylesheet" href="{% static 'css/leaflet.ie.css' %}" />
+
 		<![endif]-->
+
+
+		<link rel="stylesheet" href="{% static 'css/main.css' %}">
 		<link rel="stylesheet" href="{% static 'css/main.css' %}">
 		<link rel="stylesheet" href="{% static 'css/additional-style.css' %}">
         <script src="{% static 'js/modernizr-2.6.2-respond-1.1.0.min.js' %}"></script>
